--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,25 @@
 
 
 /* FONTS */
+@font-face {
+  font-family: 'Kumbh Sans';
+  src: url('../fonts/KumbhSans-Bold.woff2') format('woff2'),
+      url('../fonts/KumbhSans-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Kumbh Sans';
+  src: url('../fonts/KumbhSans-Regular.woff2') format('woff2'),
+      url('../fonts/KumbhSans-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 
 
 /* CUSTOM PROPS */
