--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ html {
 
 body {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   background-color: var(--blue);
   color: var(--grey);
@@ -63,7 +64,8 @@ body {
   background-image: url(../img/bg-pattern-top.svg),
                     url(../img/bg-pattern-bottom.svg);
   background-repeat: no-repeat;
-  background-position:-203px -500px, 718px 340px;
+  background-position: left -250px top -500px,
+                        right -250px bottom -650px;
 }
 
 img {
@@ -104,12 +106,100 @@ input:-webkit-autofill:focus {
 
 
 
-/* MAIN-CONTENT */
-
-.main-content {
-  flex-grow: 1;
+.card__main {
+  position: relative;
+  width: 100%;
+  max-width: 350px;
+  border-radius: 15px;
+  background-color: #fff;
 }
 
+.card__header {
+  display: block;
+}
+
+.card__header-img {
+  display: block;
+  width: 350px;
+  height: 140px;
+}
+
+.card__content {
+  text-align: center;
+  padding-top: 68px;
+  padding-bottom: 28px;
+  border-bottom: 1px solid #e8e9ec;
+}
+
+.card__content-link {
+  top:90px;
+  left:120px;
+  position: absolute;
+  display: block;
+}
+
+.card__content-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: block;
+  border: 4px solid #fff;
+}
+
+.card__content-description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 12px;
+}
+
+.card__content-name {
+  color: var(--dark);
+  font-size: 18px;
+  line-height: 18px;
+  margin-right: 9px;
+}
+
+.card__content-age {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.card__content-city {
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.card__footer {
+  padding-top: 24px;
+  padding-bottom: 27px;
+}
+
+.card__footer-list {
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+}
+
+.card__footer-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+}
+.card__footer-info {
+  font-size: 18px;
+  line-height: 18px;
+  margin-bottom: 10px;
+  font-weight: 700;
+  color:var(--dark);
+}
+
+.card__footer-description {
+  font-size: 12px;
+  line-height: 1.5;
+}
 
 
 /* RETINA BACKGROUND IMAGES */
